tests/ui/slice_of_type_alias.stderr
error[E0277]: slice of opaque C++ type is not supported
  --> tests/ui/slice_of_type_alias.rs:17:21
   |
17 |         fn g(slice: &[ElementOpaque]);
   |                     ^^^^^^^^^^^^^^^^ requires `ElementOpaque: Unpin`
   |
   = help: the trait `SliceOfUnpin_ElementOpaque` is not implemented for `&[ElementOpaque]`
